icon alignment fixed in FF as well

--- a/sass/modules/_addresslist.sass
+++ b/sass/modules/_addresslist.sass
@@ -16,6 +16,7 @@
 .action-complex
   @extend .actionbutton
   +icon('ui/house.png','ui/bldg.png')
+  height: rhythm(1)
   &.single
     +icon('ui/bldg.png','ui/house.png')
 .action-info
